--- a/home.html
+++ b/home.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garage Finder</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar ">
             <div class="cont">
                 <div class="cont1">
                     <img src="assets/svg/hamburger.svg" alt="" class="hamburger">
@@ -32,17 +40,15 @@
             </div>
         </nav>
     </header>
-    <main class="content">
-        <aside class="ham">
-            <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="">Contact Us</a></li>
-            </ul>
-        </aside>
-        <section class="main-content">
-            <div class="left">
-                <!-- <div class="card">
+    <div class="ham">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="">Contact Us</a></li>
+        </ul>
+    </div>
+    <div class="left">
+        <!-- <div class="card h-r">
                     <img src="assets/images/g1.webp" alt="">
                     <div class="card-cont">
                         <div class="name">Name</div>
@@ -50,18 +56,16 @@
                         <div class="distance">distance</div>
                     </div>
                 </div> -->
-                <div class="search-card">
+        <!-- <div class="search-card h-r">
                     <img src="assets/images/g10.jpeg" alt="">
                     <div class="search-card-cont">
                         <div class="name">Name</div>
                         <div class="address">address</div>
                         <div class="distance">distance</div>
                     </div>
-
-                </div>
-            </div>
-        </section>
-    </main>
+                </div> -->
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
