modified:   about.html 	modified:   contactus.html 	modified:   login.html

--- a/login.html
+++ b/login.html
@@ -31,17 +31,17 @@
                             <a class="nav-link text-gray-300" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-gray-300" href="contact.html">Contact us</a>
+                            <a class="nav-link text-gray-300" href="contactus.html">Contact us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-gray-300" href="login.html">Login</a>
                         </li>
                     </ul>
                 </div>
-                <div class="search" style="flex-direction: column;">
+                <!-- <div class="search" style="flex-direction: column;">
                     <input class="searchInput" type="text" id="s" name="s" placeholder="Search">
                     <button class="searchBtn" type="button">Search</button>
-                </div>
+                </div> -->
             </div>
         </nav>
     </header>
